# hspec-free-sample

./: .gitignore  CHANGELOG.md  ChangeLog.md  README.md  hie.yaml  hspec-free-sample.cabal  package.yaml
app/: Main.hs
src/HspecFreeSample/: App.hs  AppCmd.hs  AppRunner.hs  AskCmd.hs  Config.hs  PrintCmd.hs
test/: Spec.hs
test/HspecFreeSample/Spec/: AppSpec.hs  Mock.hs
