cabal-version:      2.4
name:               hspec-free-sample
version:            0.1.0.0
synopsis:

homepage:           https://github.com/tana-gh/hspec-free-sample

license:            BSD-3-Clause
license-file:       LICENSE
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010
    hs-source-dirs:   src

    exposed-modules:
        HspecFreeSample.App,
        HspecFreeSample.AppCmd,
        HspecFreeSample.AppRunner,
        HspecFreeSample.AskCmd,
        HspecFreeSample.PrintCmd

    build-depends:
        base ^>=4.14.1.0,
        free,
        mtl

executable hspec-free-sample
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0,
        hspec-free-sample,
        free,
        mtl

test-suite hspec-free-sample-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    exposed-modules:
        HspecFreeSample.Spec.AppSpec,
        HspecFreeSample.Spec.Mock
    
    build-depends:
        base ^>=4.14.1.0,
        hspec-free-sample,
        free,
        hspec,
        mtl
